--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -5,19 +5,24 @@
       <hr>
 
       <h2>Choose your Job</h2>
-
-      <div class="dropdown">
-        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          Select Job
-          <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-          <% current_user.jobs.each do |job| %>
-          <li><a href="/jobs/<%= job.id %>"><%= job.company.name.upcase %>: <%= job.title %></a></li>
+      <% current_user.jobs.each do |job| %>
+      <li><a href="/jobs/<%= job.id %>"><%= job.company.name.upcase %>: <%= job.title %></a></li>
       <% end %>
-        </ul>
-      </div>
-
     </div>
   </div>
+</div>
+
+
+<div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    Dropdown
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    <li><a href="#">Action</a></li>
+    <li><a href="#">Another action</a></li>
+    <li><a href="#">Something else here</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">Separated link</a></li>
+  </ul>
 </div>
