--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
   }
   </style>
 
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag    "default", :media => "all" %>
+  <%= javascript_include_tag "default" %>
   <%= csrf_meta_tags %>
 
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -40,7 +40,6 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <% if current_user.present? %>
           <% if Admin.where( user_id: current_user.id ).present? %>
           <li><a href="/shifts"><i class="fa fa-list" aria-hidden="true"></i> See Your Shifts</a></li>
           <li><a href="/approvals/<%= current_user.id %>"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> Approve Shifts</a></li>
@@ -48,10 +47,6 @@
           <% else %>
           <li><a href="/shifts"><i class="fa fa-list" aria-hidden="true"></i> See Past Shifts</a></li>
           <% end %>
-          <% else %>
-            <!-- false -->
-          <% end %>
-
 
         </ul>
 
