--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   /* Only necessary if you are using navbar-fixed-top */
   body {
     padding-top: 60px;
+    padding-bottom: 60px;
   }
   </style>
 
