--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -4,8 +4,10 @@
   </h1>
 </div>
 
-<% @jobs.find_by(admin_id: current_user.id).each do |job| %>
+<% if current_user.present? %>
 
+
+<% @jobs.where(user_id: current_user.id).each do |job| %>
 
 <h2><%= job.company.name.upcase %>: <%= job.title %></h2>
 <button type="button" name="button" class="btn btn-lg btn-success"><%= link_to "New Shift", "/shifts/new?job_id=#{job.id}", {:style=>"color:white"} %></button>
@@ -23,7 +25,7 @@
         <th></th>
       </tr>
 
-      <% @shifts.find_by(job_id: job.id).each do |shift| %>
+      <% @shifts.where(job_id: job.id).each do |shift| %>
       <tr>
         <td><a href="/shifts/<%= shift.id %>/edit"><%= shift.time_in.to_date %></a></td>
         <td><a href="/shifts/<%= shift.id %>/edit"><%= shift.time_in.in_time_zone("Central Time (US & Canada)").hour.to_s.rjust(2, '0') %>:<%= shift.time_in.min.to_s.rjust(2, '0') %></a></td>
@@ -37,9 +39,10 @@
         </td>
       </tr>
       <% end %>
+
     </table>
 
   </div>
 </div>
-
+<% end %>
 <% end %>
